src/components/CardDetails.module.css
.flipCardBody {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.englishText {
  text-align: center;
  word-break: break-word;
}

.fullText {
  display: flex;
  align-items: flex-end;
}

.furiKanji {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.furi {
  font-size: 0.6rem;
}

